--- a/sites/updates.thunderbird.net/thunderbird/128.0/apr25/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/apr25/donate/index.html
@@ -5,12 +5,12 @@
  # This is an exact replicate of nov24/index.html but without the base_url set in donate_button.
  # This actually pulls up the form!
  #}
-{% set active_page = "appeal-mar25" %}
+{% set active_page = "appeal-apr25" %}
 
 {# For donation url generation #}
-{% set fru_form_id = 'eoy2024' %}
-{% set utm_campaign = 'mar25_appeal' %}
+{% set fru_form_id = 'apr25' %}
+{% set utm_campaign = 'apr25_appeal' %}
 {% set donation_base_url = None %}
 
 {# Just include previous page instead of duplicating it all #}
-{% extends "thunderbird/128.0/mar25/index.html" %}
+{% extends "thunderbird/128.0/apr25/index.html" %}
