Fix typo in beta channel description

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -29,7 +29,7 @@
               {{ _('The Daily channel is where development and testing begin, and new features are developed. This is expected to be the least stable channel. Make sure you back up important data regularly.') }}
             </p>
             <p id="beta-warning" class="notice-panel warning hidden">
-              {{ _('The Beta channel is where stabilization occurs. This is expected to be more stable that Daily, but not as stable as the Release or Extended Support Release channels. Make sure you back up important data regularly.') }}
+              {{ _('The Beta channel is where stabilization occurs. This is expected to be more stable than Daily, but not as stable as the Release or Extended Support Release channels. Make sure you back up important data regularly.') }}
             </p>
             <p id="esr-notice" class="notice-panel info hidden">
               {{ _('The official annual extended support release. This release is intended for users who want all available new features on an annual basis and stability/security fixes on a monthly basis.') }}
