Add override for new Mozilla logo

--- a/sites/updates.thunderbird.net/thunderbird/128.0/apr25/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/apr25/index.html
@@ -8,6 +8,7 @@
 #}
 
 {% set active_page = "appeal-apr25" %}
+{% set use_new_mozilla_logo = True %}
 
 {# For donation url generation #}
 {% set fru_form_id = fru_form_id|default('apr24') %}
