--- a/sites/updates.thunderbird.net/thunderbird/128.0/apr25/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/apr25/index.html
@@ -8,6 +8,7 @@
 #}
 
 {% set active_page = "appeal-apr25" %}
+{% set use_new_mozilla_logo = True %}
 
 {# For donation url generation #}
 {% set fru_form_id = fru_form_id|default('apr24') %}
@@ -19,8 +20,7 @@
 {% from 'includes/macros/donate-button.html' import donate_button with context %}
 
 {% block base_css %}
-  <link href="{{ static('css/appeal-dec24-style.css') }}" rel="stylesheet" type="text/css"/>
-
+  <link href="{{ static('css/appeal-apr25-style.css') }}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block page_title %}{{ _('Only 3% of users support Thunderbird') }}{% endblock %}
 
