--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -146,6 +146,7 @@
           {{ job_block(_('Sr. Release Engineer, Desktop'), 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Staff Software Engineer, Desktop'), 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. UX Design Specialist'), 'Jesse Miksic', high_res_img('thunderbird/staff/jesse_miksic.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Technical PM'), 'Kelly McSweeney', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
@@ -158,7 +159,6 @@
           {{ job_block(_('Communications & Engagement Coordinator'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Marketing & Communications'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Mobile Engineering'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr. Release Engineer'), 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Test'), 'Rob Wood', high_res_img('thunderbird/staff/rob_wood.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Site Reliability Engineer'), 'Ryan Jung', high_res_img('thunderbird/staff/ryan_jung.png', scale='2x', alt_formats=('webp',))) }}
@@ -166,6 +166,7 @@
           {{ job_block(_('Associate Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Employee Experience Specialist'), 'Tarandeep Kaur', high_res_img('thunderbird/staff/tarandeep_kaur.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Desktop Engineering'), 'Toby Pilling', high_res_img('thunderbird/staff/toby_pilling.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Software Engineer, Mobile'), 'Todd Heasley', high_res_img('thunderbird/staff/todd_heasley.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Desktop'), 'Vineet Deo', high_res_img('thunderbird/staff/vineet_deo.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Community Manager'), 'Wayne Mery', high_res_img('thunderbird/staff/wayne_mery.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Mobile'), 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
@@ -179,9 +180,10 @@
 {% endblock %}
 
 {% macro job_block(title, name, img) %}
+  {% set slug = name.replace(' ', '-')|lower %}
   {% set name = name.replace(' ', '\n') %}
   {% set title_lines = split_keep_delimiter(title, ',') %}
-  <div class="person">
+  <div class="person" id="staff-{{ slug }}">
     {{ img }}
     <h5>{{ name }}</h5>
     <div class="job-title">
