--- a/sites/updates.thunderbird.net/thunderbird/128.0/apr25/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/apr25/index.html
@@ -15,6 +15,8 @@
 {% set utm_campaign = utm_campaign|default('apr25_appeal') %}
 {% set utm_source = utm_source|default('thunderbird-client') %}
 {% set donation_base_url = donation_base_url|default(url('updates.128.appeal.apr25.donate')) %}
+{# Disable the donation banner on this redirect page, we set this to false in the actual donation page. #}
+{% set disable_donation_notice_banner = disable_donation_notice_banner|default(True) %}
 
 {% extends "includes/base/base.html" %}
 {% from 'includes/macros/donate-button.html' import donate_button with context %}
@@ -40,7 +42,7 @@
 {% endblock %}
 {% block content %}
   <section id="donate-button-container">
-    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, source=utm_source, base_url=donation_base_url) }}
+    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, source=utm_source, base_url=donation_base_url, disable_notice=disable_donation_notice_banner) }}
   </section>
   <section id="appeal-body">
     <div class="letter-container font-xl">
