add Ashley Soucar, Chris Roth and update Malini Das' image

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -139,9 +139,11 @@
           {{ job_block(_('Sr. Software Engineer, Services'), 'Alejandro Aspinwall', high_res_img('thunderbird/staff/alejandro_aspinwall.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Finance & Accounting Specialist'), 'Anthony Macchia', high_res_img('thunderbird/staff/anthony_macchia.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Software Engineer, Mobile'), 'Ashley Soucar', high_res_img('thunderbird/staff/ashley_soucar.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
           {{ job_block(_('Sr. Software Engineer, Desktop'), 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Services'), 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr Staff Engineer, Strategic Initiatives'), 'Chris Roth', high_res_img('thunderbird/staff/chris_roth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Release Operations'), 'Corey Bryant', high_res_img('thunderbird/staff/corey_bryant.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Release Engineer, Desktop'), 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Desktop'), 'Eleanor Dicharry', high_res_img('thunderbird/staff/eleanor_dicharry.png', scale='2x', alt_formats=('webp',))) }}
