Replace outdated changelog link for mobile downloads (#827) (Fixes #825)
* Point TfA changelog to repo releases

* Add TfA release urls

* Use url() links

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -199,10 +199,10 @@
             <h4>{{ _('More Information') }}</h4>
             <ul>
               <li>
-                <a class="small-link dotted" href="https://github.com/thunderbird/thunderbird-android/wiki/ReleaseNotes#minimum-android-version-compatibility">{{ _('System Requirements') }}</a>
+                <a class="small-link dotted" href="{{ url('download.android.compatibility') }}">{{ _('System Requirements') }}</a>
               </li>
               <li>
-                <a class="small-link dotted" href="https://github.com/thunderbird/thunderbird-android/wiki/ReleaseNotes#change-logs">{{ _('Release Notes') }}</a>
+                <a class="small-link dotted" href="{{ url('download.android.changelog') }}">{{ _('Release Notes') }}</a>
               </li>
             </ul>
           </div>
