Add some empty space for padding

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -136,6 +136,8 @@
           {{ job_block(_('Council Member'), 'Teal Dulcet', high_res_img('thunderbird/staff/teal_dulcet.png', scale='2x', alt_formats=('webp',)), True) }}
         </div>
       </div>
+      <div class="section-text">
+      </div>
     </div>
   </section>
   {% include 'includes/components/page-separator.html' %}
