Bold support link on monthly landing page. (#840)

--- a/sites/updates.thunderbird.net/thunderbird/128.0/monthly/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/monthly/index.html
@@ -102,7 +102,7 @@
     <p>
       {% trans trimmed support_url='https://support.mozilla.org/kb/thunderbird-release' %}
       Not yet available on Microsoft Store, Snap, and Flatpak.<br>
-      Visit our <a href="{{ support_url }}">Support Page</a> for more details about making the change.
+      Visit our <strong><a href="{{ support_url }}">Support Page</a></strong> for more details about making the change.
       {% endtrans %}
     </p>
   </div>
