Add copy and fix font, and some more minor styling.

--- a/sites/updates.thunderbird.net/thunderbird/140.0/jun25/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/jun25/index.html
@@ -22,14 +22,14 @@
   <link href="{{ static('css/appeal-jun25-style.css') }}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
-{% block page_title %}{{ _('Help Keep Thunderbird Alive!') }}{% endblock %}
+{% block page_title %}{{ _('Thank you for making Thunderbird possible!') }}{% endblock %}
 
 {% block site_header %}
   <div id="header-gradient"></div>
   <div id="appeal-header">
     <header>
-      <h1 id="appeal-heading" aria-label="{{ _('Help Keep Thunderbird Alive!') }}">
-        {{ _('Help Keep <span>Thunderbird Alive</span>') }}
+      <h1 id="appeal-heading" aria-label="{{ _('Thank you for making Thunderbird possible!') }}">
+        {{ _('<span>Thank YOU</span> for making Thunderbird possible!') }}
       </h1>
     </header>
     <aside id="illustration" aria-hidden="true">
@@ -44,31 +44,33 @@
     {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, base_url=donation_base_url) }}
   </section>
   <section id="appeal-body">
-    <div class="letter-container font-xl">
-    <p>{{ _('All of the work we do is funded by less than 3% of our users.')}}</p>
-    <p>
-      {{ _('We never show advertisements or sell your data. We don’t have corporate funding. We are fully funded by financial contributions from our users.')}}
-    </p>
-    <p>
-      {{ _('Thunderbird’s mission is to give you the best privacy-respecting, customizable email experience possible. Free for everyone to install and enjoy! Maintaining expensive servers, fixing bugs, developing new features, and hiring talented engineers are crucial for this mission.')}}
-    </p>
-    <p>
-      {{ _('If you get value from using Thunderbird, please help support it. We can’t do this without you.')}}
-    </p>
-    <div class="heart-container">
-      <div class="left-lines">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+    <div class="letter-container">
+      <p>
+        {% trans trimmed %}
+          The latest Thunderbird release exists because of you. Your donations directly funded every line of code, every bug fix, and every new feature you're experiencing today. You didn't just download and use Thunderbird,
+          <strong>you helped build it.</strong>
+        {% endtrans %}
+      </p>
+      <p>
+        {% trans trimmed %}
+          Because supporters like you believed in truly private and ad-free email, we immediately turned your contributions into real improvements.
+          <strong>Will you support the next chapter?</strong>
+        {% endtrans %}
+      </p>
+      <div class="heart-container">
+        <div class="left-lines">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+        <div aria-hidden="true" class="heart-svg">{{ svg('donate-heart') }}</div>
+        <div class="right-lines">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
       </div>
-      <div aria-hidden="true" class="heart-svg">{{ svg('donate-heart') }}</div>
-      <div class="right-lines">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    </div>
-    <p class="closing-text">{{ _('The Thunderbird Team') }}</p>
+      <p class="closing-text">{{ _('The Thunderbird Team') }}</p>
     </div>
   </section>
 {% endblock %}
