Fix localization error with blank alt tag

--- a/sites/updates.thunderbird.net/thunderbird/140.0/jun25/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/jun25/index.html
@@ -34,7 +34,7 @@
     </header>
     <aside id="illustration" aria-hidden="true">
       <div id="roc">
-        {{ high_res_img('thunderbird/appeal/jun25/forest-roc.png', {'alt': _('')}, alt_formats=('webp', 'avif')) }}
+        {{ high_res_img('thunderbird/appeal/jun25/forest-roc.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
       </div>
     </aside>
   </div>
