--- a/sites/updates.thunderbird.net/thunderbird/140.0/jun25/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/jun25/donate/index.html
@@ -11,6 +11,9 @@
 {% set fru_form_id = 'jun25' %}
 {% set utm_campaign = 'jun25_appeal' %}
 {% set donation_base_url = None %}
+{# We want to show the redirect notice here as this is where the modal will actually open up. #}
+{% set disable_donation_blocked_notice = False %}
+
 
 {# Just include previous page instead of duplicating it all #}
 {% extends "thunderbird/140.0/jun25/index.html" %}
