Create block elements in jun25, move it to jun25a and add jun25b.

--- a/sites/updates.thunderbird.net/thunderbird/140.0/jun25b/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/jun25b/donate/index.html
@@ -16,4 +16,4 @@
 
 
 {# Just include previous page instead of duplicating it all #}
-{% extends "thunderbird/140.0/jun25/index.html" %}
+{% extends "thunderbird/140.0/jun25b/index.html" %}
