--- a/sites/updates.thunderbird.net/thunderbird/140.0/jun25a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/jun25a/index.html
@@ -12,7 +12,10 @@
 {# For donation url generation #}
 {% set fru_form_id = fru_form_id|default('jun25') %}
 {% set utm_campaign = utm_campaign|default('jun25_appeal') %}
-{% set donation_base_url = donation_base_url|default(url('updates.140.appeal.jun25.donate')) %}
+{% set utm_content = utm_content|default('cta_a') %}
+{% set utm_source = utm_source|default('new_tab') %}
+{% set utm_medium = utm_source|default('desktop') %}
+{% set donation_base_url = donation_base_url|default(url('updates.140.appeal.jun25a.donate')) %}
 {% set use_new_mozilla_logo = True %}
 {# Disable the donation banner on this redirect page, we set this to false in the actual donation page. #}
 {% set disable_donation_blocked_notice = disable_donation_blocked_notice|default(True) %}
@@ -30,9 +33,11 @@
   <div id="header-gradient"></div>
   <div id="appeal-header">
     <header>
+      {% block appeal_headline %}
       <h1 id="appeal-heading" aria-label="{{ _('Thank you for making Thunderbird possible!') }}">
         {{ _('<span>Thank YOU</span> for making Thunderbird possible!') }}
       </h1>
+      {% endblock %}
     </header>
     <aside id="illustration" aria-hidden="true">
       <div id="roc">
@@ -43,7 +48,7 @@
 {% endblock %}
 {% block content %}
   <section id="donate-button-container">
-    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, base_url=donation_base_url) }}
+    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, content=utm_content, source=utm_source, medium=utm_medium, base_url=donation_base_url, disable_donation_blocked_notice=disable_donation_blocked_notice) }}
   </section>
   <section id="appeal-body">
     <div class="letter-container">
