Fix the updates.thunderbird.net footer, and lots of clean up.

--- a/sites/updates.thunderbird.net/thunderbird/128.0/monthly/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/monthly/index.html
@@ -7,7 +7,7 @@
 {% from 'includes/download/macros/download-smart.html' import download_smart with context %}
 
 {% block base_css %}
-  <link href="{{ static('css/base-style.css') }}" rel="stylesheet" type="text/css" />
+  <link href="{{ static('css/updates-style.css') }}" rel="stylesheet" type="text/css" />
   <link href="{{ static('css/monthly-style.css') }}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
