update staff member list to add new hire

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -176,6 +176,7 @@
           {{ job_block(_('Sr Staff Engineer, Strategic Initiatives'), 'Chris Roth', high_res_img('thunderbird/staff/chris_roth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Release Operations'), 'Corey Bryant', high_res_img('thunderbird/staff/corey_bryant.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Release Engineer, Desktop'), 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Software Engineer, Services'), 'Davi Nakano', high_res_img('thunderbird/staff/davi_nakano.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Desktop'), 'Eleanor Dicharry', high_res_img('thunderbird/staff/eleanor_dicharry.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Staff Software Engineer, Desktop'), 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
