Due to a rendering bug with some svgs, swap them for pngs/webp/avif in what's new 140.

--- a/sites/updates.thunderbird.net/thunderbird/140.0/whatsnew/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/whatsnew/index.html
@@ -34,7 +34,7 @@
     #}
     <header id="eclipse" class="header">
       <div class="row">
-        {{ svg_img('appeal/whatsnew-140/logo', alt_text=_('Thunderbird Eclipse 140'), class_name='header-logo') }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-140/logo.png', optional_attributes={'class':'header-logo', 'alt': _('Thunderbird Eclipse 140')}, alt_formats=('avif', 'webp')) }}
         {{ svg_img('appeal/whatsnew-140/star-group', class_name='header-star-group') }}
       </div>
     </header>
@@ -60,7 +60,7 @@
             </h1>
           </header>
           <div class="row">
-            {{ svg_img('appeal/whatsnew-140/pictographs/msg-mode') }}
+            {{ high_res_img('thunderbird/appeal/whatsnew-140/pictographs/msg-mode.png', optional_attributes={'alt': ''}, alt_formats=('avif', 'webp')) }}
             <p>
               {% trans trimmed %}
                 Thunderbird’s Dark Mode now automatically adapts your messages when enabled, with a quick optional toggle to adjust your message view as needed.
@@ -79,7 +79,7 @@
             </h1>
           </header>
           <div class="row">
-            {{ svg_img('appeal/whatsnew-140/pictographs/notification') }}
+            {{ high_res_img('thunderbird/appeal/whatsnew-140/pictographs/notification.png', optional_attributes={'alt': ''}, alt_formats=('avif', 'webp')) }}
             <p>
               {% trans trimmed %}
                 Leverage the speed and ease of your Operating System’s built-in notifications, whether you’re on Windows, Linux, or Mac. Quickly delete, archive, or use customizable actions directly from your notifications and get more done with your day.
@@ -98,7 +98,7 @@
             </h1>
           </header>
           <div class="row">
-            {{ svg_img('appeal/whatsnew-140/pictographs/folder-sort') }}
+            {{ high_res_img('thunderbird/appeal/whatsnew-140/pictographs/folder-sort.png', optional_attributes={'alt': ''}, alt_formats=('avif', 'webp')) }}
             <p>
               {% trans trimmed %}
                 Don’t like the order for your custom folders? Just click and drag to arrange them exactly how you want.
@@ -120,7 +120,7 @@
             </h1>
           </header>
           <div class="row">
-            {{ svg_img('appeal/whatsnew-140/pictographs/appearance') }}
+            {{ high_res_img('thunderbird/appeal/whatsnew-140/pictographs/appearance.png', optional_attributes={'alt': ''}, alt_formats=('avif', 'webp')) }}
             <p>
               {% trans trimmed %}
                 Make Thunderbird yours across all your folders and accounts with a single click. Change your message list layout between Cards and Table view, adjust your Cards View, and set your default sorting order and threading options with ease.
@@ -139,7 +139,7 @@
             </h1>
           </header>
           <div class="row">
-            {{ svg_img('appeal/whatsnew-140/pictographs/account-hub-v02') }}
+            {{ high_res_img('thunderbird/appeal/whatsnew-140/pictographs/account-hub-v02.png', optional_attributes={'alt': ''}, alt_formats=('avif', 'webp')) }}
             <p>
               {% trans trimmed %}
                 Adding a new account to Thunderbird is now easier than ever. Connect all of your emails, address books and calendars in a few easy steps.
