--- a/sites/start.thunderbird.net/daily/index.html
+++ b/sites/start.thunderbird.net/daily/index.html
@@ -17,7 +17,7 @@
 
           <div class="donate">
             {{ _('Support us!') }}
-            {{ '<a href="%(donate)s" class="donate-btn" data-donate-btn data-donate-redirect="donate" data-donate-content="paragraph_text" data-donate-source="start_page_tb_daily">'|format(donate=redirect_donate_url(content='paragraph_text', source='start_page_tb_daily', location='thunderbird.donate', make_full_url=True, show_donation_modal=False)) }}
+            {{ '<a href="%(donate)s" class="donate-btn" data-donate-btn data-donate-redirect="donate" data-donate-content="paragraph_text" data-donate-source="start_page_tb_daily">'|format(donate=redirect_donate_url(content='paragraph_text', source='start_page_tb_daily', location='thunderbird.donate', show_donation_modal=False)) }}
               {{ svg('donate-btn-heart') }}
               {{ _('Donate') }}
             </a>
